--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@sanity/client": "^6.4.12",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
+    "grog": "^0.0.1",
+    "next": "13.5.4",
+    "next-sanity": "^5.5.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "typescript": "^5"
   }
 }
