--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^2.1.9",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "grog": "^0.0.1",
@@ -21,7 +23,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
+    "react-tender": "^1.1.1",
+    "stripe": "^14.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
