--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^2.1.9",
     "dotenv": "^16.3.1",
+    "file-loader": "^6.2.0",
     "framer-motion": "^10.16.4",
     "grog": "^0.0.1",
     "next": "13.5.4",
+    "next-cloudinary": "^4.28.0",
     "next-sanity": "^5.5.8",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
