--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-sanity": "^5.5.8",
     "next-videos": "^1.4.1",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
