--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-tender": "^1.1.1",
+    "sharp": "^0.32.6",
     "stripe": "^14.1.0"
   },
   "devDependencies": {
