--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^2.1.9",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.4",
     "grog": "^0.0.1",
+    "gsap": "^3.12.5",
     "next": "13.5.4",
     "next-auth": "^4.24.4",
     "next-auth-sanity": "^1.5.3",
     "next-cloudinary": "^4.28.0",
     "next-sanity": "^5.5.8",
+    "next-video": "^0.16.2",
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-device-detect": "^2.2.3",
@@ -33,7 +37,8 @@
     "react-responsive": "^9.0.2",
     "react-tender": "^1.1.1",
     "sharp": "^0.32.6",
-    "stripe": "^14.1.0"
+    "stripe": "^14.1.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
